small tweak to get nspr logging running again. bug 58514 r=warren